variable detection is working